[project]
name = "ORIOKS Monitoring Bot"
description = "Bot for tracking changes in the educational electronic environment (ORIOKS) National Research University of Electronic Technology MIET orioks.miet.ru on the Telegram platform."
license = "MIT"
authors = [
    {name = "Kirill Kulikov", email = "to+git@adoge.ru"},
    {name = "Polina Kleiner", email = "polina.kleiner@gmail.com"},
    {name = "whom", email = "m0rtydisg@gmail.com"},
    {name = "Alexey Voronin", email = "8183700@edu.miet.ru"},
    {name = "Anton Petrov", email = "tohichpetrov@gmail.com"},
]
maintainers = [
    {name = "Kirill Kulikov", email = "to+git@adoge.ru"},
]
repository = "https://github.com/orioks-monitoring/bot"
homepage = "orioks-monitoring.github.io/bot/"
readme = "README.md"
requires-python = "==3.10"


[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 79
exclude = ["**/*.py?(i)", "app/migrations/versions"]

[tool.ruff.lint]
select = ['ALL']
ignore = [
    "BLE001", # allow "catch Exception"
    "D100", # don't require docstrings
    "D101", # don't require docstrings
    "D102", # don't require docstrings
    "D103", # don't require docstrings
    "D104", # don't require docstrings
    "D105", # don't require docstrings
    "D107", # don't require docstrings
    "D203", # don't require empty line before docstrings
    "D205", # allow multi-line docstrings to consist of one paragraph
    "D212", # set multi-line docstrings to start at second line
    "D400", # allow arbitrary first line ending of docstrings
    "D415", # allow arbitrary first line ending of docstrings
    "DTZ005", # allow datetime without timezone
    "EM101", # allow strings in error messages 
    "EM102", # allow f-strings in error messages 
    "ERA001", # allow commented code
    "FIX", # allow TODOs
    "Q000", # preserve string quotes
    "RUF001", # allow ambiguous cyrillic/latin letters 
    "RUF003", # allow ambiguous cyrillic/latin letters 
    "S301", # allow pickle deserialization
    "TD", # allow TODOs
    "TRY003", # allow "long" error messages 

    "RUF013", # DELETE
    "PTH103", # DELETE
    "PTH107", # DELETE
    "PLW2901", # DELETE
    "E712", # DELETE
    "PLC0414", # DELETE
    "UP015", # DELETE
    "RET503", # DELETE
    "FBT002", # DELETE
    "ASYNC230", # DELETE
    "TRY203", # DELETE
    "PLR0402", # DELETE
    "ANN205", # DELETE
    "FBT001", # DELETE
    "ARG004", # DELETE
    "ANN003", # DELETE
    "ANN002", # DELETE
    "ARG002", # DELETE
    "RSE102", # DELETE
    "F401", # DELETE
    "W291", # DELETE
    "ANN206", # DELETE
    "TID252", # DELETE
    "E402", # DELETE
    "E402", # DELETE
    "RUF022", # DELETE
    "C901", # DELETE
    "B905", # DELETE
    "RET504", # DELETE
    "ANN202", # DELETE
    "TRY002", # DELETE
    "PTH123", # DELETE
    "S311", # DELETE
    "TRY400", # DELETE
    "C401", # DELETE
    "INP001", # DELETE
    "ANN201", # DELETE
    "ANN001", # DELETE
    "RUF006", # DELETE
    "C408", # DELETE
    "PLR2004", # DELETE
    "TRY201", # DELETE
    "RET501", # DELETE
    "PTH100", # DELETE
    "PTH118", # DELETE
    "PTH120", # DELETE
    "RUF200", # DELETE
    "RUF012", # DELETE
    "COM812", # DELETE
    "ANN204", # DELETE
    "E501", # DELETE
    "N999", # DELETE
]

[tool.ruff.format]
quote-style = "preserve"
